--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+h1 {
+    text-decoration: underline;
+}
+
 body{
 background-color: black;
 color: aliceblue;
 font-family: 'Courier New', Courier, monospace;
 border-width: 2px;
-border: 2px dashed white;
+border: 2px solid white;
+font-size: large;
+
 }  
